# win-ntp-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  ntp_client.cpp  ntp_client.h
